# solana-pinocchio-guide

./: LICENSE  README.md
pinocchio-amm/: Cargo.toml  Makefile  README.md
pinocchio-amm/src/: constants.rs  entrypoint.rs  error.rs  lib.rs
pinocchio-amm/src/instruction/: deposit.rs  initialize.rs  mod.rs  swap.rs  withdraw.rs
pinocchio-amm/src/state/: config.rs
pinocchio-amm/tests/: tests.rs
pinocchio-counter/: Cargo.toml  Makefile  README.md
pinocchio-counter/src/: constants.rs  entrypoint.rs  lib.rs
pinocchio-counter/src/instruction/: create.rs  decrement.rs  delete.rs  increment.rs  mod.rs
pinocchio-counter/src/state/: counter.rs
pinocchio-counter/tests/: tests.rs
pinocchio-escrow/: Cargo.toml  Makefile  README.md
pinocchio-escrow/src/: constants.rs  entrypoint.rs  lib.rs
pinocchio-escrow/src/instruction/: make.rs  mod.rs  refund.rs  take.rs
pinocchio-escrow/src/state/: escrow.rs
pinocchio-escrow/tests/: tests.rs
pinocchio-hello-world/: Cargo.toml  Makefile  README.md
pinocchio-hello-world/src/: lib.rs
pinocchio-hello-world/tests/: tests.rs
pinocchio-vault/: Cargo.toml  Makefile  README.md
pinocchio-vault/src/: constants.rs  entrypoint.rs  lib.rs
pinocchio-vault/src/instruction/: deposit.rs  mod.rs  withdraw.rs
pinocchio-vault/tests/: tests.rs
solana-pinocchio-starter/: README.md
solana-pinocchio-starter/client/idl/: solana_pinocchio_starter.json
solana-pinocchio-starter/program/benches/: compute_units.md  compute_units.rs
solana-pinocchio-starter/program/src/instruction/: update_mystate.rs
